aggiunto section e aside + css

--- a/index.html
+++ b/index.html
@@ -7,13 +7,28 @@
   </head>
   <body>
     <header>
+      <div class="header">
 
+      </div>
     </header>
     <main>
+      <aside id="sezione_sx" class="aside">
 
+      </aside>
+      <section class = "sezione_main">
+
+      </section>
+      <aside id="sezione_dx_inAlto" class="aside">
+
+      </aside>
+      <aside id="sezione_dx_inBasso" class="aside">
+
+      </aside>
     </main>
     <footer>
-
+      <div class="footer">
+        
+      </div>
     </footer>
   </body>
 </html>
